--- a/app.json
+++ b/app.json
@@ -1,1 +1,116 @@
-
+{
+  "expo": {
+    "name": "Blue Ghost",
+    "slug": "blue-ghost-app",
+    "scheme": "blue-ghost",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "userInterfaceStyle": "dark",
+    "newArchEnabled": true,
+    "privacy": "unlisted",
+    "analytics": false,
+    "updates": {
+      "enabled": false
+    },
+    "ios": {
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSCameraUsageDescription": "Blue Ghost needs camera access to let you take photos for posts. All photos are privacy-protected with AI scanning.",
+        "NSMicrophoneUsageDescription": "Blue Ghost needs microphone access to record voice notes for your posts.",
+        "NSPhotoLibraryUsageDescription": "Blue Ghost needs photo library access to let you select images for posts. All images are privacy-protected.",
+        "NSUserTrackingUsageDescription": "Blue Ghost will NEVER track you. This permission is explicitly denied.",
+        "SKAdNetworkItems": [],
+        "NSAdvertisingAttributionReportEndpoint": "",
+        "NSMotionUsageDescription": false,
+        "NSLocationWhenInUseUsageDescription": false,
+        "NSLocationAlwaysAndWhenInUseUsageDescription": false,
+        "NSContactsUsageDescription": false,
+        "NSCalendarsUsageDescription": false,
+        "NSRemindersUsageDescription": false,
+        "NSHealthShareUsageDescription": false,
+        "NSHealthUpdateUsageDescription": false,
+        "NSFaceIDUsageDescription": false
+      },
+      "config": {
+        "allowsArbitraryLoads": false
+      }
+    },
+    "android": {
+      "edgeToEdgeEnabled": true,
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE"
+      ],
+      "blockedPermissions": [
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_BACKGROUND_LOCATION",
+        "android.permission.READ_CONTACTS",
+        "android.permission.WRITE_CONTACTS",
+        "android.permission.READ_CALENDAR",
+        "android.permission.WRITE_CALENDAR",
+        "android.permission.BODY_SENSORS",
+        "android.permission.ACTIVITY_RECOGNITION",
+        "com.google.android.gms.permission.ACTIVITY_RECOGNITION",
+        "android.permission.READ_PHONE_STATE",
+        "android.permission.ACCESS_NETWORK_STATE",
+        "android.permission.ACCESS_WIFI_STATE",
+        "com.google.android.gms.permission.AD_ID"
+      ],
+      "config": {
+        "networkSecurityConfig": {
+          "domain-config": {
+            "domain": "*",
+            "includeSubdomains": true,
+            "pin-set": {
+              "expiration": "2025-01-01",
+              "pin": []
+            }
+          }
+        }
+      }
+    },
+    "plugins": [
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Blue Ghost needs camera access to let you take photos for posts."
+        }
+      ],
+      [
+        "expo-av",
+        {
+          "microphonePermission": "Blue Ghost needs microphone access to record voice notes for your posts."
+        }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "Blue Ghost needs photo library access to let you select images for posts."
+        }
+      ],
+      [
+        "expo-tracking-transparency",
+        {
+          "userTrackingPermission": false
+        }
+      ]
+    ],
+    "hooks": {
+      "postPublish": []
+    },
+    "extra": {
+      "eas": {
+        "build": {
+          "experimental": {
+            "ios": {
+              "appExtensions": []
+            }
+          }
+        }
+      }
+    }
+  }
+}
