--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
+"dependencies": {
+  "expo": "~49.0.0",
+  "expo-av": "~14.0.0",
+  "expo-camera": "~14.0.0",
+  "expo-image-picker": "~14.0.0",
+  "expo-tracking-transparency": "~4.0.0",
+  "react": "18.2.0",
+  "react-native": "0.72.0"
+}
 "scripts": {
   "start": "expo start",
   "android": "expo start --android",
-  "ios": "expo start --ios"
+  "ios": "expo start --ios",
+  "start": "expo start"
 }
 {
   "name": "template-app-53",
@@ -37,6 +47,7 @@
     "@shopify/react-native-skia": "v2.0.0-next.4",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+	"expo":"^49.0.0",
     "expo": "^53.0.9",
     "expo-application": "~6.1.4",
     "expo-auth-session": "^6.0.3",
