--- a/app.json
+++ b/app.json
@@ -1,8 +1,20 @@
+"expo": {
+  ...
+  "entryPoint": "./App.js",
+  "android": {
+    "package": "com.blueghost.app"
+  },
+  "ios": {
+    "bundleIdentifier": "com.blueghost.app"
+  }
+}
+
 {
   "expo": {
     "name": "Blue Ghost",
     "slug": "blue-ghost-app",
     "scheme": "blue-ghost",
+	"sdkVersion: "49.0.0", 
     "version": "1.0.0",
     "orientation": "portrait",
     "userInterfaceStyle": "dark",
