--- a/package.json
+++ b/package.json
@@ -33,14 +33,11 @@
 		"@shopify/react-native-skia": "v2.0.0-next.4",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
-		"expo-av": "~14.0.0",
-		"expo-camera": "~14.0.0",
-		"expo-image-picker": "~14.0.0",
-		"expo-tracking-transparency": "~4.0.0",
 		"react": "18.2.0",
 		"react-native": "0.73.7",
 		"expo": "50.0.0",
-	//	"expo - application ": "~6.1.4 ",
+		"expo-image-picker": "15.0.0",
+		"expo-tracking-transparency": "~5.0.0",
 		"expo-auth-session": "^6.0.3",
 		"expo-av": "~15.1.4",
 		"expo-background-fetch": "~13.1.5",
